# asyncfuture

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  asyncfuture.h  asyncfuture.pri  asyncfuture.pro  asyncfuture.qbs  qpm.json
.travis/: run-tests.sh
tests/asyncfutureunittests/: FinishedAndCancelThread.cpp  FinishedAndCancelThread.h  asyncfuture.supp  asyncfuturetests.cpp  asyncfuturetests.h  asyncfutureunittests.pro  asyncfutureutils.h  bugtests.cpp  bugtests.h  cookbook.cpp  cookbook.h  example.cpp  example.h  main.cpp  qpm.json  samplecode.cpp  samplecode.h  spec.cpp  spec.h  testclass.cpp  testclass.h  testfunctions.cpp  testfunctions.h  tools.h  trackingdata.cpp  trackingdata.h
tests/asyncfutureunittests/qmltests/: tst_QmlTests.qml
tests/compilererrors/: README.md  compilererrors.cpp  compilererrors.pro  invalidnumberofarguments.cpp
